--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,7 +5,7 @@ body{
     margin: 0px;
     padding: 0px;
     
-    /* background: url("../html/imagenes/fondo.jpg") no-repeat center center fixed; */
+     
     background-size: cover;
 }
 
@@ -88,19 +88,33 @@ body{
 }
 
 .highlights div{
+    position: relative;
     display: inline-block;
     height: 100%;
     box-sizing: border-box;
     margin: 0 10px 0 10px;
     padding: 0px;
+
+    filter: blur(0);
+    
+    transition: filter 0.2s ease-in-out;
+
+
 }
+
+.highlights div :hover {
+    filter: blur(5px);
+}
+
 .highlights div img{
     height: 100%;
     /* Ponemos un sombreado a las imagenes */
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-
-
+    /*Para aplicar un desenfoque*/
 }
+
+
+
 .highlights-title{
     font-size: 50px;
     font-family: 'Montserrat', sans-serif;
@@ -121,13 +135,14 @@ body{
     
     padding: 0 200px 0 200px;
     margin: 100px 0 50px 0;
-    height: 90px;
+    height: 50px;
     
     padding:0 50px 0 50px  ;
     
     
 }
 .social-networks div{
+    position: relative;
     display: inline-block;
     height: 100%;
 }
@@ -135,7 +150,44 @@ body{
 .social-networks div img{
     display: inline-block;
     height: 100%;
-    padding: 0 120px 0 120px;
+    padding: 0 143px 0 143px;
+
+    transition: transform 0.2s ease-in-out;
+
+}
+
+.social-networks  div img:hover {
+
+    transform: scale(1.1);
+  
+
+}
+
+/*-----------------------------------------------------------*/
+.baner{
+    position: relative;
+    display: flex;
+    background-color: #323030;
+    height: 100px;
+    width: 100%;
 }
 
 
+.baner-text{
+    box-sizing: border-box;
+
+    position: absolute;
+    top: 50%;
+    color:white;
+    padding:0 20px 0 20px;
+    
+    
+}
+
+.baner img{
+    position: absolute;
+    right: 0;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 20px;
+}
