--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,14 +3,14 @@
 <!--Actualmente no se usa-->
 <head>
     <title>CvGYM</title>
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link rel="stylesheet" href="/css/homepage.css">
 </head>
 
 <body>
     <div class="menu">
 
         <div class="logo">
-            <img src="../static/img/logo.png" alt="Logo HTML">
+            <img src="/static/img/logo.png" alt="Logo HTML">
         </div>
 
 
