--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,7 +3,7 @@
 <!--Actualmente no se usa-->
 <head>
     <title>CvGYM</title>
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link rel="stylesheet" href="/css/homepage.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 <header >
     <nav >
         <div class="logo">
-            <img src="/static/img/logo.png" alt="Logo HTML">
+            <img src="/img/logo.png" alt="Logo HTML">
         </div>
         <ul class="sections">
             <li><a href="#">Inicio</a></li>
