--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -7,6 +7,7 @@ body {
     padding: 0px;
     background-size: cover;
     overflow-x: hidden;
+    hight: 100%;
 }
 
 header {
@@ -16,7 +17,7 @@ header {
     justify-content: space-between;
     /* agregamos esta propiedad */
     align-items: center;
-    padding: 20px;
+    padding: 0;
     background-color: #333;
     height: 100%;
     
