nuevo formulario y actualizaciones

--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -229,6 +229,12 @@ nav a {
 }
 
 /*-----------------------------------------------------------*/
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 .baner {
     position: relative;
     display: flex;
