Restruc. con footer/header generico

--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="stylesheet" href="css/form.css">
-
-</head>
-
-<body>
-
+{{>header}}
+<link rel="stylesheet" href="/css/form.css">
 
     <div>
         <h1>Ajustes de Administrador</h1>
@@ -16,7 +8,7 @@
     <div class="contenedor">
 
         <div class="form">
-            <form action="/gym/" method="post">
+            <form action="/course/" method="post">
                 <h2>Crear nuevo gimnasio</h2>
 
                 <div class="row">
@@ -78,14 +70,4 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-</body>
-
-</html>
+{{>footer}}
