--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
+{{>header}}
 <div class="highlights-title">
     <p>HIGHLIGHTS</p>
 
@@ -26,7 +24,6 @@
     </div>
 
 </div>
-
 
 <div class="final-text">
     <p class="text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
@@ -72,5 +69,5 @@
 
 
 </div>
-</body>
-</html>
+
+{{>footer}}
