--- a/src/main/resources/templates/prices.html
+++ b/src/main/resources/templates/prices.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<head>
-  <link rel="stylesheet" href="/css/contents.css">
-</head>
-<body>
+{{>header}}
+<link rel="stylesheet" href="/css/contents.css">
   <div>
     <h1>Nuestras Tarifas</h1>
   </div>
@@ -60,5 +57,4 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+{{>footer}}
