--- a/src/main/resources/static/centers.css
+++ b/src/main/resources/static/centers.css
@@ -1,6 +1,6 @@
 body {
-    display: flex;
-    justify-content: center;
+    /*display: flex;*/
+    /*justify-content: center;*/
 }
 
 .filtersContainer {
@@ -30,6 +30,9 @@ p {
     color: white;
     margin: 15px;
 }
+h2, h3{
+    font-family: 'Montserrat', sans-serif;
+}
 
 p{
     margin-top: 0;
@@ -42,7 +45,7 @@ ul {
 
 .filters {
     border-radius: 10px;
-    background-color: #323030;
+    background-color: #212529;
     width: 20%;
     margin: 0 40px 0 40px;
 
@@ -56,9 +59,9 @@ ul {
 }
 
 .gym {
-
+    color: black;
     margin: 0 0 0 20px;
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 li {
@@ -67,17 +70,14 @@ li {
 }
 
 .ele {
-    background-color: #323030;
+    background-color: #212529;
     border-radius: 10px;
     margin: 20px;
 
     width: 100%;
     height: 200px;
     overflow: hidden;
-
-
     display: flex;
-
 
 }
 
@@ -87,8 +87,9 @@ li {
     padding: 10px;
     border-radius: 10px;
 
-    width: 40%;
+    width: 10%;
     min-width: 30%;
+    overflow: hidden;
     padding: 0;
 
 
