--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -73,6 +73,7 @@ nav a {
     text-decoration: none;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 
     transition: color 0.3s ease;
 }
