--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/centers.css">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css' />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.min.css'
-          media='print' />
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js'></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-          integrity="sha384- rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-            integrity="sha384- cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384- kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-
+{{>header}}
+<link rel="stylesheet" href="/centers.css">
 <div class="filtersContainer">
 
 
@@ -58,16 +32,14 @@
                 <div class="ele">
                     <div class="gymImagen">
 
-                        <img src="gym (1).jpg" alt="Imagen">
+                        <img src="/img/gymPhoto.jpg" alt="Imagen">
                     </div>
                     <div class="ciudad">
                         <h2>{{city}}</h2>
                         <p>{{ccaa}}</p>
-                        <p>{{address}}, Nº{{number}}, {{zip}} - {{number}}</p>
+                        <p>{{address}}, Nº{{number}}, {{zip}} - {{phoneNumber}}</p>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod metus vel ligula
-                            dapibus
-                            scelerisque. Sed ac blandit tortor.</p>
+                        <p>Más información..</p>
                     </div>
                 </div>
             </li>
@@ -78,11 +50,6 @@
 </div>
 
 
-
-
-
-
 <script src="main.js"></script>
-</body>
 
-</html>
+{{>footer}}
