--- a/src/main/resources/templates/forms/addClass.html
+++ b/src/main/resources/templates/forms/addClass.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="stylesheet" href="/css/form.css">
-    <link rel="stylesheet" href="/css/calendarPopUp.css">
-</head>
-
-<body>
-
+{{>header}}
+<link rel="stylesheet" href="/css/form.css">
     <div>
         <h1>Ajustes de Administrador</h1>
     </div>
@@ -91,6 +83,4 @@
     </div>
 
     <script src="prueba.js"></script>
-</body>
-
-</html>
+{{>footer}}
