Formularios Contacto, FAQs y actualizaciones

--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -8,7 +8,7 @@
     <div class="contenedor">
 
         <div class="form">
-            <form action="/course/" method="post">
+            <form action="/gym/" method="post">
                 <h2>Crear nuevo gimnasio</h2>
 
                 <div class="row">
