--- a/src/main/resources/templates/forms/createClass.html
+++ b/src/main/resources/templates/forms/createClass.html
@@ -20,7 +20,7 @@
 
         <div class="form-group">
           <label for="description">Descripción:</label>
-          <textarea class="form-control" id="description" name="description" rows="4">Descripción aquí...</textarea>
+          <textarea class="form-control" id="description" name="description" rows="4" placeholder="Descripción aquí..."></textarea>
         </div>
         <br><br>
 
