--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -48,7 +48,7 @@
             <li><a href="/">Galería</a></li>
             <li><a href="/prices/">Precios</a></li>
             <li><a href="/">Productos</a></li>
-            <li><a href="javascript:void(0)" onclick="loadContent('html/forms/createClass.html')">Contacto</a></li>
+            <li><a href="/create-question/">Contacto</a></li>
             <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Ayuda y FAQ's</a></li>
 
         </ul>
