--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -49,7 +49,7 @@
             <li><a href="/prices/">Precios</a></li>
             <li><a href="/">Productos</a></li>
             <li><a href="/create-question/">Contacto</a></li>
-            <li><a href="javascript:void(0)" onclick="loadContent('html/prueba.html')">Ayuda y FAQ's</a></li>
+            <li><a href="/help/">Ayuda y FAQ's</a></li>
 
         </ul>
         <div class="dropdown">
