--- a/src/main/resources/templates/helpFAQs.html
+++ b/src/main/resources/templates/helpFAQs.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<head>
+{{>header}}
     <link rel="stylesheet" href="/css/helpFAQs.css">
-</head>
-<body>
+
     <div>
         <h1>¿Cómo podemos ayudarte?</h1>
     </div>
@@ -48,7 +46,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        ¿Cómo puedo pagar mi deuda pendiente con McFIT?
+                        ¿Cómo puedo pagar mi deuda pendiente con CVGYM?
                     </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
@@ -59,6 +57,4 @@
             </div>
         </div>
     </div>
-
-</body>
-</html>
+{{>footer}}
