--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -1,5 +1,6 @@
 
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/centers.css">
 <div class="filtersContainer">
 
@@ -51,5 +52,5 @@
 
 
 <script src="main.js"></script>
-
+</main>
 {{>footer}}
