--- a/src/main/resources/templates/forms/contact.html
+++ b/src/main/resources/templates/forms/contact.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
     <link rel="stylesheet" href="/css/form.css">
     <div>
         <h1>Contacto</h1>
@@ -41,4 +42,5 @@
         </div>
 
     </div>
+</main>
 {{>footer}}
