--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/css/form.css">
 
     <div>
@@ -69,5 +70,5 @@
 
 
     </div>
-
+</main>
 {{>footer}}
