--- a/src/main/resources/templates/helpFAQs.html
+++ b/src/main/resources/templates/helpFAQs.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
     <link rel="stylesheet" href="/css/helpFAQs.css">
 
     <div>
@@ -57,4 +58,5 @@
             </div>
         </div>
     </div>
+</main>
 {{>footer}}
