--- a/src/main/resources/templates/forms/addClass.html
+++ b/src/main/resources/templates/forms/addClass.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/css/form.css">
     <div>
         <h1>Ajustes de Administrador</h1>
@@ -83,4 +84,5 @@
     </div>
 
     <script src="prueba.js"></script>
+</main>
 {{>footer}}
