--- a/src/main/resources/templates/forms/addCoach.html
+++ b/src/main/resources/templates/forms/addCoach.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/css/form.css">
 <div>
     <h1>Ajustes de Administrador</h1>
@@ -43,5 +44,5 @@
     </div>
 
 </div>
-
+</main>
 {{>footer}}
