--- a/src/main/resources/templates/forms/createClass.html
+++ b/src/main/resources/templates/forms/createClass.html
@@ -1,4 +1,5 @@
-{{>header}}\
+{{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/css/form.css">
   <div>
     <h1>Ajustes de Administrador</h1>
@@ -31,4 +32,5 @@
     </div>
 
   </div>
+</main>
 {{>footer}}
