--- a/src/main/resources/templates/prices.html
+++ b/src/main/resources/templates/prices.html
@@ -1,4 +1,5 @@
 {{>header}}
+<main class="d-flex flex-column min-vh-100">
 <link rel="stylesheet" href="/css/prices.css">
 <div>
   <h1>Nuestras Tarifas</h1>
@@ -57,4 +58,5 @@
     </div>
   </div>
 </div>
+</main>
 {{>footer}}
