Vista de un gimnasio

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,7 +6,7 @@
                 <p>© 2023 CVGYM</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <img src="/img/logobaner.png" alt="BANNER HTML" style="height: 50px;">
+                <img src="/img/logo/logobaner.png" alt="BANNER HTML" style="height: 50px;">
             </div>
         </div>
     </div>
