--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -32,7 +32,7 @@
     <nav>
 
         <div class="logo">
-            <img src="/img/logo.png" alt="Logo HTML">
+            <img src="/img/logo/logo.png" alt="Logo HTML">
         </div>
 
         <input type="checkbox" id="check">
@@ -47,7 +47,7 @@
             <li><a href="/centers/">Centros</a></li>
             <li><a href="/">Galería</a></li>
             <li><a href="/prices/">Precios</a></li>
-            <li><a href="/">Productos</a></li>
+            <li><a href="/center/">Productos</a></li>
             <li><a href="/create-question/">Contacto</a></li>
             <li><a href="/help/">Ayuda y FAQ's</a></li>
 
