--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -1,7 +1,7 @@
 
 {{>header}}
 <main class="d-flex flex-column min-vh-100">
-<link rel="stylesheet" href="/centers.css">
+<link rel="stylesheet" href="/css/centers.css">
 <div class="filtersContainer">
 
 
@@ -33,7 +33,7 @@
                 <div class="ele">
                     <div class="gymImagen">
 
-                        <img src="/img/gymPhoto.jpg" alt="Imagen">
+                        <img src="/img/center/gymPhoto.jpg" alt="Imagen">
                     </div>
                     <div class="ciudad">
                         <h2>{{city}}</h2>
@@ -51,6 +51,6 @@
 </div>
 
 
-<script src="main.js"></script>
+<script src="/js/centers.js"></script>
 </main>
 {{>footer}}
