--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -9,7 +9,7 @@
     <div class="contenedor">
 
         <div class="form">
-            <form action="/gym/" method="post">
+            <form action="/gym/" method="post" accept-charset="UTF-8">
                 <h2>Crear nuevo gimnasio</h2>
 
                 <div class="row">
@@ -31,18 +31,14 @@
 
                 </div>
 
-
+                <label  class="form-label">Comunidad Autónoma</label>
+                <select id="ccaa" name="ccaa" class="form-select">
+                    <option selected>Choose...</option>
+                </select>
 
                 <label class="form-label">Ciudad</label>
                 <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad">
 
-
-                <label  class="form-label">Comunidad Autónoma</label>
-                <select id="ccaa" name="ccaa"  class="form-select">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                    <option>Madrid</option>
-                </select>
 
                 <label class="form-label">Número de contacto</label>
                 <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393">
@@ -61,8 +57,8 @@
                 </div>
 
                 <br><br>
-                <button type="submit">Crear Usuario</button>
-<!--                <input type="submit" class="btn btn-light" value="Confirmar">-->
+
+                <input type="submit" class="btn btn-light" value="Confirmar">
 
             </form>
 
@@ -70,5 +66,7 @@
 
 
     </div>
+
 </main>
+<script src="/js/ccaa.js" charset="UTF-8"></script>
 {{>footer}}
