Updates Vista de un gym

--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -1,47 +1,167 @@
 {{>header}}
 
 <link rel="stylesheet" href="/css/center.css">
-<h1 class="ubicacion">
-    Universidad Rey Juan Carlos, campus de Móstoles, Avenida del Alcalde de Móstoles, Móstoles
-</h1>
-
 <section class="section-1">
-
     <img src="/img/center/fondo.jpg" alt="">
 </section>
 
-
-
-
-<section class="section-2">
-
-    <div class="left-section">
-        <h1>NUESTRO HORARIO DE ACTIVIDADES</h1>
-        <div class="timetable">
-
+<div class="main">
+    <h1 class="title">SI TIENES DUDAS, LLÁMANOS O ENVIANOS UN CORREO</h1>
+    <section class="section-2" >
+        <!-- ///////////////////////////////////////////////////////////////////////////////////-->
+        <div class="info" style="border-radius: 10px">
+            <h1>INFORMACIÓN</h1>
+            <div class="text" >
+                <p>Dirección:</p>
+                <p class="ubication">
+                    C/Río Jarama, 11, Mostoles(Madrid), 28934 </p>
+                <p>Número de Conctacto:</p>
+                <p>9789078696</p>
+            </div>
         </div>
-    </div>
-
-    <div class="right-section">
-        <h1>UBICACION</h1>
-
-        <div id="map">
-
+        <!-- ///////////////////////////////////////////////////////////////////////////////////-->
+        <div class="left-section" style="border-radius: 10px">
+            <h1>HORARIO</h1>
+            <div class="text">
+                <img id="table" src="/img/center/timetable.png" alt="IMAGE">
+            </div>
         </div>
-    </div>
+        <!-- ///////////////////////////////////////////////////////////////////////////////////-->
+        <div class="right-section" style="border-radius: 10px">
 
-</section>
+            <h1>UBICACIÓN</h1>
+
+            <div id="map" style="border-radius: 10px"></div>
+        </div>
+        <!-- ///////////////////////////////////////////////////////////////////////////////////-->
+    </section>
+</div>
 
 
 
 <section class="section-3">
-    <img src="photo-1.jpg" alt="Photo 1">
-    <img src="photo-2.jpg" alt="Photo 2">
-    <img src="photo-3.jpg" alt="Photo 3">
+
+    <h1 class="courseTitle">NUESTRAS CLASES</h1>
+
+    <ul id="list">
+
+        <li class="nameCourse">
+
+            <div class="ele">
+
+                <div class="CourseImagen">
+
+                    <img src="/img/center/zumba.jpg" alt="Imagen">
+
+                </div>
+
+                <div class="course">
+                    <h2>Zumba</h2>
+                    <p>Intendidad: Nivel 5</p>
+                    <p>Descripción: Officia est consectetur laborum amet ex aliquip nostrud ea adipisicing.
+                        Incididunt deserunt anim culpa est Lorem aute veniam ex voluptate ipsum laborum qui. Quis
+                        elit laboris aute aliqua qui anim do. Mollit ea adipisicing do ut ex nostrud ipsum mollit
+                        nulla occaecat occaecat ut aliquip dolor. Laboris quis ea sit consectetur ullamco. </p>
+                </div>
+
+            </div>
+        </li>
+
+        <li class="nameCourse">
+
+            <div class="ele">
+
+                <div class="CourseImagen">
+
+                    <img src="/zumba.jpg" alt="Imagen">
+
+                </div>
+
+                <div class="course">
+                    <h2>Zumba</h2>
+                    <p>Intendidad: Nivel 5</p>
+                    <p>Descripción: Officia est consectetur laborum amet ex aliquip nostrud ea adipisicing.
+                        Incididunt deserunt anim culpa est Lorem aute veniam ex voluptate ipsum laborum qui. Quis
+                        elit laboris aute aliqua qui anim do. Mollit ea adipisicing do ut ex nostrud ipsum mollit
+                        nulla occaecat occaecat ut aliquip dolor. Laboris quis ea sit consectetur ullamco. </p>
+                </div>
+
+            </div>
+        </li>
+
+        <li class="nameCourse">
+
+            <div class="ele">
+
+                <div class="CourseImagen">
+
+                    <img src="/zumba.jpg" alt="Imagen">
+
+                </div>
+
+                <div class="course">
+                    <h2>Zumba</h2>
+                    <p>Intendidad: Nivel 5</p>
+                    <p>Descripción: Officia est consectetur laborum amet ex aliquip nostrud ea adipisicing.
+                        Incididunt deserunt anim culpa est Lorem aute veniam ex voluptate ipsum laborum qui. Quis
+                        elit laboris aute aliqua qui anim do. Mollit ea adipisicing do ut ex nostrud ipsum mollit
+                        nulla occaecat occaecat ut aliquip dolor. Laboris quis ea sit consectetur ullamco. </p>
+                </div>
+
+            </div>
+        </li>
+
+        <li class="nameCourse">
+
+            <div class="ele">
+
+                <div class="CourseImagen">
+
+                    <img src="/zumba.jpg" alt="Imagen">
+
+                </div>
+
+                <div class="course">
+                    <h2>Zumba</h2>
+                    <p>Intendidad: Nivel 5</p>
+                    <p>Descripción: Officia est consectetur laborum amet ex aliquip nostrud ea adipisicing.
+                        Incididunt deserunt anim culpa est Lorem aute veniam ex voluptate ipsum laborum qui. Quis
+                        elit laboris aute aliqua qui anim do. Mollit ea adipisicing do ut ex nostrud ipsum mollit
+                        nulla occaecat occaecat ut aliquip dolor. Laboris quis ea sit consectetur ullamco. </p>
+                </div>
+
+            </div>
+        </li>
+
+        <li class="nameCourse">
+
+            <div class="ele">
+
+                <div class="CourseImagen">
+
+                    <img src="/zumba.jpg" alt="Imagen">
+
+                </div>
+
+                <div class="course">
+                    <h2>Zumba</h2>
+                    <p>Intendidad: Nivel 5</p>
+                    <p>Descripción: Officia est consectetur laborum amet ex aliquip nostrud ea adipisicing.
+                        Incididunt deserunt anim culpa est Lorem aute veniam ex voluptate ipsum laborum qui. Quis
+                        elit laboris aute aliqua qui anim do. Mollit ea adipisicing do ut ex nostrud ipsum mollit
+                        nulla occaecat occaecat ut aliquip dolor. Laboris quis ea sit consectetur ullamco. </p>
+                </div>
+
+            </div>
+        </li>
+
+    </ul>
 </section>
 
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPFQiBLzTqRwHBGJJrrxb6oI1tUwRirD0&callback=initMap&v=weekly" async></script>
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPFQiBLzTqRwHBGJJrrxb6oI1tUwRirD0&callback=initMap&v=weekly"
+        async></script>
 <script src="/js/map.js"></script>
 
 {{>footer}}
