--- a/src/main/resources/static/css/center.css
+++ b/src/main/resources/static/css/center.css
@@ -1,13 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
 /* Set the default margin and padding to 0 for the whole page */
-/*body {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    !* Establece la alineación vertical al centro *!*/
-/*    flex-direction: column;*/
-/*    overflow-x: hidden;*/
-/*}*/
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #323030 !important;
+}
+
+p,
+h1, h2 {
+    font-family: 'Montserrat', sans-serif;
+    overflow: hidden;
+
+
+}
+
+.text,
+.timetable,
+map{
+    overflow: hidden;
+}
 
 /* Define the style for the first section */
 .section-1 {
@@ -28,14 +41,45 @@
     object-fit: cover;
 }
 
+.main {
+    width: 100%;
+    /* justify-content: space-between;
+    align-items: center; */
+}
+
+
 /* Define the style for the second section */
 .section-2 {
     /* Make the section a flex container with row direction */
     height: 100%;
     /* Set the width to 100% and the height to 50% of the viewport height */
     width: 100%;
-    /* justify-content: space-between;
-    align-items: center; */
+
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.info {
+
+    display: flex;
+
+    flex-direction: column;
+
+
+    height: 40vh;
+    width: 30%;
+
+    margin: 30px;
+    background-color: orange;
+}
+
+
+.text {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
 }
 
 /* Define the style for the left section in the second section */
@@ -44,35 +88,36 @@
     display: flex;
     flex-direction: column;
 
-
-    width: 50%;
-    min-width: 500px;
-    height: 50vh;
+    width: 30%;
+    height: 40vh;
     margin: 30px;
     /* Set the background color to medium gray */
-    background-color: #aaa;
+    background-color: orange;
     float: left;
 }
-.section-2 h1{
 
-    margin-bottom: 0;
+#table {
+
+    height: 100%;
 }
 
-.timetable{
+.timetable {
     background-color: orange;
     height: 100%;
 
 }
 
+
 /* Define the style for the right section in the second section */
 .right-section {
     /* Set the width to 40% of the available space and the height to 100% */
-    height: 50vh;
-    width: 500px;
+    height: 40vh;
+    width: 30%;
     margin: 30px;
     /* Set the background color to light gray */
-    background-color: #bbb;
+
     float: right;
+    background-color: orange;
 
 
     display: flex;
@@ -82,12 +127,13 @@
 /* Define the style for the third section */
 .section-3 {
     display: flex;
+    flex-direction: column;
+    /* Colocar los elementos uno debajo del otro */
     justify-content: center;
-
-
+    /* Centrar verticalmente */
     align-items: center;
-    /* Set the height to 20% of the viewport height */
-    height: 20vh;
+    /* Centrar horizontalmente */
+    width: 100%;
 
 
 }
@@ -99,7 +145,75 @@
 
 }
 
+
+.title {
+    margin-top: 30px;
+    color: white;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
 #map {
 
     height: 100%;
 }
+
+h1{
+    margin: 10px;
+}
+
+ p .course, .info p {
+    margin: 20px 20px 0 30px !important;
+}
+
+
+/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+.courseTitle{
+    color: white;
+}
+li{
+    list-style: none;
+}
+
+.course h2,p .info, .course p{
+    color: black;
+    margin: 20px;
+
+
+}
+
+.nameCourse{
+    display: flex;
+    flex-direction: column;
+    /* Colocar los elementos uno debajo del otro */
+    justify-content: center;
+    /* Centrar verticalmente */
+    align-items: center;
+}
+.ele {
+    background-color: white;
+    border-radius: 10px;
+    margin: 20px;
+
+    width: 65%;
+    height: 250px;
+    overflow: hidden;
+    display: flex;
+
+}
+
+.CourseImagen{
+    flex-grow: 1;
+    width: 100%;
+    overflow: hidden;
+
+}
+.CourseImagen img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
