Logo para el Head

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>CvGYM</title>
-
+    <link rel="icon" href="/img/logo/logocv.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo/logocv.png" type="image/x-icon">
 
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
 
